--- a/styles.css
+++ b/styles.css
@@ -29,3 +29,14 @@ img {
     font-size: 20px;
   }
 
+  footer {
+    background-color: white;
+    color: slateblue;
+    font-size: 14px;
+    padding: 10px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    margin-left: -20px;
+    margin-right: -20px;
+  }
